--- a/apps/blog/templates/blog/tags/base_right.html
+++ b/apps/blog/templates/blog/tags/base_right.html
@@ -12,9 +12,9 @@
     <div class="card-body px-0 pt-3 pb-1">
         <div class="row text-center">
             <div class="col">
-                <a href="{{ my_github }}" target="_blank" title="进入博主的Github查看博客源码">
+                <a href="https://github.com/Thchoonlophon" target="_blank" title="进入博主的Github,虽然没有什么用">
                     <img style="max-width:40px" alt="博主的github" src="{% static 'blog/img/github.png' %}">
-                    <p class="mt-2">Github</p>
+                    <p class="mt-2">GitHub</p>
                 </a>
             </div>
             <div class="col">
@@ -24,13 +24,32 @@
                 </a>
             </div>
             <div class="col">
-                <a href="{% url 'rss'%}" target="_blank" title="订阅博客">
-                    <img style="max-width:40px" alt="订阅博客RSS" src="{% static 'blog/img/rss.png' %}">
-                    <p class="mt-2">RSS订阅</p>
+                <a href="https://weibo.com/234114309" target="_blank" title="微博">
+                    <img style="max-width:40px" alt="微博" src="{% static 'blog/img/weibo.png' %}">
+                    <p class="mt-2">微博</p>
                 </a>
             </div>
         </div>
     </div>
+</div>
+<div class="card border-0 rounded-0 px-3 mb-2 mb-md-3 d-none d-lg-block" id="home-card">
+	<div class="card-header bg-white px-0">
+		<strong><i class="fa fa-bullhorn mr-2 f-17"></i>本站公告</strong>
+	</div>
+	<div class="card-body px-0 py-3">
+		<p class="mt-2">
+			本站未做IE兼容性测试，可能不兼容所有IE内核的浏览器，并影响各功能的实际使用体验，故优先推荐使用Chrome浏览器。
+		</p>
+
+		<p class="mt-2">
+			近期因为秋城城主锦丧失了写东西的乐趣和动力，也可能是因为懒，故目前城主已经较长时间未进行更新。
+		</p>
+		<!--
+		<p class="mt-2">
+			嚯哈哈哈哈哈哈~本城主又回来了，但是本城主现在啥都不想写，你说气人不？
+		</p>
+		-->
+	</div>
 </div>
 <!--文章分类-->
 <div class="card border-0 rounded-0 px-3 mb-2 mb-md-3" id="category-card">
@@ -83,4 +102,13 @@
             </div>
         </div>
     </div>
+</div>
+<!-- 微信 -->
+<div class="card border-0 rounded-0 px-3 mb-2 mb-md-3" id="tag-card">
+    <div class="card-header bg-white px-0">
+		<strong><i class="fa fa-weixin mr-2 f-17"></i>博主微信</strong>
+	</div>
+	<div class="card-body px-0 py-3">
+		<img style="max-width:200px; text-align:center" src="{% static 'blog/img/WeChat.png' %}">
+	</div>
 </div>
