modified some configrations

--- a/apps/blog/templates/blog/tags/base_right.html
+++ b/apps/blog/templates/blog/tags/base_right.html
@@ -109,6 +109,6 @@
 		<strong><i class="fa fa-weixin mr-2 f-17"></i>博主微信</strong>
 	</div>
 	<div class="card-body px-0 py-3">
-		<img style="max-width:200px; text-align:center" src="{% static 'blog/img/WeChat.png' %}">
+		<img style="max-width:200px; text-align:center" src="{% static 'blog/img/WeChat.jpg' %}">
 	</div>
 </div>
