--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -72,17 +72,16 @@ if(msgs>0){var _record=0;var myTitle=document.title;function titleBlink(){_recor
 {% block end_file %}{% endblock %}
 <footer class="container-fluid mt-4 py-0">
     <div class="card-body text-center px-0 f-14">
-        <p class="card-text mb-1">Copyright&nbsp;&copy;&nbsp;<span id="year-info"></span>
+        <p class="card-text mb-1">Copyright&nbsp;&copy;&nbsp;2018-&nbsp;<span id="year-info"></span>
             <a href="https://github.com/Thchoonlophon" target="_blank" title="博客作者的Github">Thchoonlophon</a>.&nbsp;Powered&nbsp;by&nbsp;Django. 感谢 <a href="https://github.com/Hopetree">Hopetree</a> 的技术支持
         </p>
         <p class="mb-0">
-            <a href="http://www.beian.gov.cn/" target="_blank"><img src="/static/blog/img/icon-footer.png" alt="">&nbsp;&nbsp;皖ICP备18009207号-1</a>
-            <a href="http://www.beian.gov.cn/" target="_blank">{{ beian }}</a>&nbsp;|
+            <a href="http://www.beian.gov.cn/" target="_blank"><img src="/static/blog/img/icon-footer.png" alt="">&nbsp;&nbsp;皖ICP备18009207号-1</a>&nbsp;|
             <a href="{% url 'django.contrib.sitemaps.views.sitemap' %}" target="_blank">Sitemap</a>
             {% if cnzz_protocol %}|&nbsp;{{ cnzz_protocol|safe }}{% endif %}
             <span id="web-day"></span>
         </p>
-        <script>function getnewYear(){var d = new Date();var old = new Date('2018/03/28');
+        <script>function getnewYear(){var d = new Date();var old = new Date('2018/11/27');
             var x = document.getElementById("year-info");
             x.innerHTML=d.getFullYear();var y=document.getElementById("web-day");
             var dd=Math.floor((d.getTime() - old.getTime()) / (24 * 3600 * 1000));
