--- a/apps/tool/templates/tool/tool.html
+++ b/apps/tool/templates/tool/tool.html
@@ -20,7 +20,7 @@
         <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
             <div class="card">
                 <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:markdown_editor' %}">
+                    <a href="{% url 'tool:markdown_editor' %}" target="_blank">
                         <img class="w-25 float-left mr-2" src="{% static 'editor/images/logos/editormd-logo-96x96.png' %}"
                              alt="Markdown编辑器">
                         <h2 class="card-title">Markdown编辑器</h2>
@@ -35,37 +35,7 @@
         <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
             <div class="card">
                 <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:baidu_push' %}">
-                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/baidu-2.png' %}"
-                             alt="百度主动推送工具">
-                        <h2 class="card-title">百度主动推送工具</h2>
-                    </a>
-                    <p class="mb-0">[站长工具]</p>
-                </div>
-                <div class="card-body p-3 tool-des">
-                    <p class="card-text">调用百度站长提供的主动推送接口批量提交链接，提升网站收录效率，老站必备</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
-            <div class="card">
-                <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:baidu_push_site' %}">
-                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/map.png' %}"
-                             alt="Sitemap主动推送">
-                        <h2 class="card-title">Sitemap主动推送</h2>
-                    </a>
-                    <p class="mb-0">[站长工具]</p>
-                </div>
-                <div class="card-body p-3 tool-des">
-                    <p class="card-text">抓取Sitemap页面所有链接，调用百度主动推送接口，主动批量提交网站链接，新站必备</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
-            <div class="card">
-                <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:regex' %}">
+                    <a href="{% url 'tool:regex' %}" target="_blank">
                         <img class="w-25 float-left mr-2" src="{% static 'blog/img/regex.png' %}"
                              alt="在线正则表达式">
                         <h2 class="card-title">在线正则表达式</h2>
@@ -80,7 +50,7 @@
         <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
             <div class="card">
                 <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:docker_search' %}">
+                    <a href="{% url 'tool:docker_search' %}" target="_blank">
                         <img class="w-25 float-left mr-2" src="{% static 'blog/img/docker.png' %}"
                              alt="Docker镜像查询">
                         <h2 class="card-title">Docker镜像查询</h2>
@@ -95,7 +65,7 @@
         <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
             <div class="card">
                 <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:useragent' %}">
+                    <a href="{% url 'tool:useragent' %}" target="_blank">
                         <img class="w-25 float-left mr-2" src="{% static 'blog/img/chrome.png' %}"
                              alt="User-Agent生成器">
                         <h2 class="card-title">User-Agent生成器</h2>
@@ -110,7 +80,7 @@
         <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
             <div class="card">
                 <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:html_characters' %}">
+                    <a href="{% url 'tool:html_characters' %}" target="_blank">
                         <img class="w-25 float-left mr-2" src="{% static 'blog/img/html.png' %}"
                              alt="HTML特殊字符对照表">
                         <h2 class="card-title">HTML特殊字符</h2>
